# agentsonrealworld

./: .env.example  .gitignore  README.md  README2.md  main.py  pyproject.toml
configs/: container.example.yaml  planning.example.yaml  react.example.yaml  servers.example.json  workflows.example.json
pictures/: McpServer-sse-stdio.puml  p1.puml  p2.puml  p3-2.puml  p3.puml  p5-2.puml  p5.puml
src/: __init__.py  config.py  logging_config.py  pipeline.py
src/agents/: llm_model_wrapper.py  message_types.py  planning_mode.py  react_mode.py  tool_utils.py
src/container/: Dockerfile.base  __init__.py  docker_manager.py  manage_network.sh  server_deployer.py  server_manager.py  state_manager.py
src/container/interceptors/: __init__.py  analyze_http_logs.py  http_javascript_interceptor.js  http_logger.py  http_python_interceptor.py
src/container/proxy/: __init__.py  stdio_to_sse_proxy.py
src/container/replay/: __init__.py  _logging.py  llm_replay_manager.py  log_manager.py  metadata_manager.py  replay_logger.py
src/models/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  gemini_provider.py  openai_provider.py  qwen_provider.py
src/scripts/: build_base_image.sh  configure_servers.py  download_servers_source.sh  manage_replay_logs.py  run_full_workflow_example.sh  smoke_deepseek.py  sync_infrastructure.py  sync_to_container.sh
src/tools/: http_mcp_client.py  mcp_client.py  mcp_tool_adapters.py
src/workflow_build/: Info.json  analyze_servers.py  build_benign_workflow.py  build_injection_workflow.py
